--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: Project2nd
+    name: gajigaji
   config:
     import: optional:file:.env  # file : 파일 import, .env : 파일명
   mail:
@@ -106,7 +106,7 @@ spring:
     activate:
       on-profile: tdd
   datasource:
-    url: jdbc:log4jdbc:mariadb://localhost:3306/project2nd2
+    url: jdbc:log4jdbc:mariadb://localhost:3306/gajigaji2
   sql:
     init:
       mode: always
