--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,9 +14,9 @@ spring:
 
   datasource:
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-    url: ${DEFAULT.DB_URL}
-    username: ${DEFAULT.DB_USERNAME}
-    password: ${DEFAULT.DB_PASSWORD}
+    url: ${PROD.DB_URL}
+    username: ${PROD.DB_USERNAME}
+    password: ${PROD.DB_PASSWORD}
 
   servlet:
     multipart:
