Hajju - JWT 만료시간 늘림, AuthenticationFacade 작업, 권한을 List<String>으로 작업, OAuth2 작업 중

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -61,7 +61,7 @@ app:
     secret: ${JWT_SECRET}
     header-schema-name: authorization
     token-type: Bearer
-    access-token-expiry: 600000
+    access-token-expiry: 3600000
     # 1800000 (ms) : 30분
 
     # RT(Refresh-Token) - 만료시간(ms) - 15일
