Hajju - 소셜로그인 작업 (구글은 테스트 완료, 카카오, 네이버는 아직 테스트 안 했음)

--- a/build.gradle
+++ b/build.gradle
@@ -24,12 +24,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-admin:6.8.1'
+
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.3'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     implementation 'org.springframework:spring-context-support:5.3.9'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 
     implementation 'org.mindrot:jbcrypt:0.4'
