--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,9 +14,54 @@ spring:
 
   datasource:
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-    url: ${PROD.DB_URL}
-    username: ${PROD.DB_USERNAME}
-    password: ${PROD.DB_PASSWORD}
+    url: ${DEFAULT.DB_URL}
+    username: ${DEFAULT.DB_USERNAME}
+    password: ${DEFAULT.DB_PASSWORD}
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${SOCIAL.GOOGLE.CLIENT_ID}
+            client-secret: ${SOCIAL.GOOGLE.SECRET}
+            scope:
+              - email
+              - profile
+          kakao:
+            client-id: ${SOCIAL.KAKAO.CLIENT_ID}
+            client-secret: ${SOCIAL.KAKAO.SECRET}
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
+            scope:
+              - profile_nickname
+              - profile_image
+            client-name: Kakao
+          naver:
+            client-id: ${SOCIAL.NAVER.CLIENT_ID}
+            client-secret: ${SOCIAL.NAVER.SECRET}
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
+            scope:
+              - name
+              - email
+              - profile_image
+            client-name: Naver
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-info-authentication-method: header
+            user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+
 
   servlet:
     multipart:
@@ -67,6 +112,16 @@ app:
     # RT(Refresh-Token) - 만료시간(ms) - 15일
     refresh-token-cookie-name: refresh-token
     refresh-token-expiry: 1296000000
+  oauth2:
+    base-uri: /oauth2/authorization
+    authorization-request-cookie-name: oauth2_auth_request
+    redirect-uri-param-cookie-name: redirect_uri
+    cookie-expiry-seconds: 180
+    authorized-redirect-uris:
+      - http://localhost:3000/oauth/redirect
+      - http://localhost:8080/oauth/redirect
+      - http://192.168.0.144:5122/oauth/redirect
+      - http://112.222.157.156:5122/oauth/redirect
 
 management:
   endpoint:
